Small gap fix

--- a/source/stylesheets/_styles.scss
+++ b/source/stylesheets/_styles.scss
@@ -105,3 +105,7 @@ footer{
 .cta{
   text-align: center;
 }
+
+.flipper{
+  margin-top: -1px;
+}
